Source/WebCore: Added mime type check to the picture source preloader to avoid downloading incompatible resources. https://bugs.webkit.org/show_bug.cgi?id=179231

Patch by Colin Bendell <colin@bendell.ca> on 2017-11-06
Reviewed by Alex Christensen.

Test: http/tests/loading/preload-picture-type.html

* html/parser/HTMLPreloadScanner.cpp:
(WebCore::TokenPreloadScanner::StartTagScanner::processAttributes): include type match state when selecting candidate imgs
(WebCore::TokenPreloadScanner::StartTagScanner::processAttribute): added type attribute evaluation and matching

LayoutTests:
Add tests to ensure that <source> tags are only preloaded when the `type`
attribute matches.
https://bugs.webkit.org/show_bug.cgi?id=179231

Patch by Colin Bendell <colin@bendell.ca> on 2017-11-06
Reviewed by Alex Christensen.

* http/tests/loading/preload-picture-type-expected.txt: Added.
* http/tests/loading/preload-picture-type.html: Added.

Canonical link: https://commits.webkit.org/195417@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224498 268f45cc-cd09-0410-ab3c-d52691b4dbfc